# zippy

./: .clippy.toml  .gitignore  AGENTS.md  BENCHMARK.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  PAPER.md  README.md  RELEASE.md  SECURITY.md  rustfmt.toml
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: README.md
benchmarks/nodejs/: benchmark_io.js  package-lock.json  package.json
benchmarks/python/: benchmark_io.py  benchmark_ml.py
cli/: AGENTS.md  Cargo.toml
cli/src/: main.rs
crates/zippy_core/: AGENTS.md  Cargo.toml
crates/zippy_core/benches/: comparison.rs  ingestion.rs  random_access.rs  scan.rs
crates/zippy_core/src/: codec.rs  container.rs  engine.rs  fast_writer.rs  ffi.rs  index.rs  layout.rs  lib.rs  schema.rs  txlog.rs  writer.rs
crates/zippy_core/tests/: integration_tests.rs
crates/zippy_data/: AGENTS.md  Cargo.toml  README.md
crates/zippy_data/benches/: comparison.rs  ingestion.rs  random_access.rs  scan.rs
crates/zippy_data/src/: engine.rs  error.rs  fast_writer.rs  ffi.rs  layout.rs  lib.rs  lock.rs  schema.rs  txlog.rs
crates/zippy_data/tests/: integration_tests.rs
crates/zippy_duckdb/: Cargo.toml
crates/zippy_duckdb/src/: lib.rs
crates/zippy_nodejs/: Cargo.toml
crates/zippy_nodejs/src/: lib.rs
crates/zippy_python/: Cargo.toml  pyproject.toml
crates/zippy_python/src/: lib.rs
docs/: Gemfile  _config.yml  index.md
docs/_includes/: footer_custom.html  head_custom.html  nav_footer_custom.html  title.html  toc.html
docs/_sass/color_schemes/: zippy.scss
docs/_sass/custom/: custom.scss
docs/docs/: benchmarks.md  cli.md  format.md  getting-started.md  index.md  nodejs.md  python.md  rust.md
examples/: README.md
examples/cli/: 01_basic_commands.sh  02_pack_unpack.sh  03_data_pipeline.sh
examples/data/: .gitkeep
examples/nodejs/: 01_basic_usage.js  02_streaming_data.js
examples/python/: 01_basic_usage.py  02_ml_dataset.py  03_pandas_integration.py  04_duckdb_integration.py  05_huggingface_integration.py  06_remote_datasets.py
examples/rust/: Cargo.toml  basic_usage.rs  ml_dataset.rs  streaming_data.rs
nodejs/: .eslintrc.json  .prettierrc  AGENTS.md  README.md  index.d.ts  index.js  jest.config.js  package-lock.json  package.json  tsconfig.json  zippy-core.d.ts
nodejs/__tests__/: store.test.ts
python/: AGENTS.md  README.md  pyproject.toml
python/tests/: __init__.py  test_dataset.py  test_duckdb.py  test_hub.py  test_iterable_dataset.py  test_providers.py  test_root.py  test_store.py
python/zippy/: __init__.py  arrow_compat.py  dataset.py  duckdb_compat.py  fast_store.py  hub.py  iterable_dataset.py  json_backend.py  pandas_compat.py  root.py  store.py  utils.py
python/zippy/providers/: __init__.py  base.py  git.py  stubs.py
scripts/: bump_version.py
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts
