[package]
name = "zippy_duckdb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DuckDB extension for ZDS (Zippy Data System)"

[lib]
crate-type = ["cdylib"]

[dependencies]
zippy_data.workspace = true
serde_json.workspace = true

# DuckDB extension dependencies (stubbed for now)
# duckdb = "0.9"
