[package]
name = "zippy_python"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Python bindings for ZDS (Zippy Data System)"

[lib]
name = "_zippy_data"
crate-type = ["cdylib"]

[dependencies]
zippy_data.workspace = true
pyo3 = { version = "0.22", features = ["extension-module"] }
serde_json.workspace = true

[build-dependencies]
pyo3-build-config = "0.22"
