[package]
name = "zippy-examples"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "basic_usage"
path = "basic_usage.rs"

[[bin]]
name = "streaming_data"
path = "streaming_data.rs"

[[bin]]
name = "ml_dataset"
path = "ml_dataset.rs"

[dependencies]
zippy_core = { path = "../../crates/zippy_core" }
serde_json = "1.0"
tempfile = "3"
anyhow = "1.0"
rand = "0.8"
chrono = "0.4"
